<?xml version="1.0"?>
<package>
  <name>sarafun_tree</name>
  <version>0.1.0</version>
  <description>Behavior tree example implementation for the SARAFun project</description>
  <maintainer email="diogoa@kth.se">Diogo Almeida</maintainer>
  <author>Diogo Almeida</author>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>behavior_tree_leaves</build_depend>
  <build_depend>behavior_tree_core</build_depend>
  <run_depend>behavior_tree_core</run_depend>
  <run_depend>behavior_tree_leaves</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>roscpp</run_depend>
</package>
