<?xml version="1.0"?>
<package format="2">
  <name>sarafun_tree</name>
  <version>1.0.0</version>
  <description>Behavior tree implementation for the SARAFun project</description>
  <maintainer email="diogoa@kth.se">Diogo Almeida</maintainer>
  <author>Diogo Almeida</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>actionlib</depend>
  <depend>std_srvs</depend>
  <depend>actionlib_msgs</depend>
  <depend>roscpp</depend>
  <depend>sarafun_manipulation</depend>
  <depend>sarafun_assembly</depend>
  <depend>behavior_tree_leaves</depend>
  <depend>behavior_tree_core</depend>
  <depend>sarafun_msgs</depend>
  <depend>roslib</depend>

</package>
