<?xml version="1.0"?>
<package format="2">
  <name>tree_generator</name>
  <version>0.1.0</version>
  <description>Behavior tree example implementation for the SARAFun project</description>
  <maintainer email="diogoa@kth.se">Diogo Almeida</maintainer>
  <author>Diogo Almeida</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>actionlib</depend>
  <depend>std_srvs</depend>
  <depend>actionlib_msgs</depend>
  <depend>sarafun_msgs</depend>

</package>
