<?xml version="1.0"?>
<package>
  <name>sarafun_assembly</name>
  <version>0.1.0</version>
  <description>Dummy assembly actionlib servers for showcasing a BT implementation</description>
  <maintainer email="diogoa@kth.se">Diogo Almeida</maintainer>
  <author>Diogo Almeida</author>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sarafun_generic_al_server</build_depend>

  <run_depend>sarafun_generic_al_server</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>roscpp</run_depend>
</package>
